# tumbleweed

./: Cargo.toml  DESIGN.md
.github/workflows/: build.yml
examples/tumbleweed_todos/: package.json
examples/tumbleweed_todos/src/: App.tsx  ErrorScreen.tsx  TaskList.tsx  index.d.ts  index.html
examples/tumbleweed_todos/todos/: Cargo.toml
examples/tumbleweed_todos/todos/schemas/: entities.toml
examples/tumbleweed_todos/todos/src/: lib.rs
examples/tumbleweed_todos/todos/todos_client/: Cargo.toml
examples/tumbleweed_todos/todos/todos_client/src/: lib.rs
examples/tumbleweed_todos/todos/todos_core/: Cargo.toml
examples/tumbleweed_todos/todos/todos_core/src/: lib.rs
examples/tumbleweed_todos/todos_client/: Cargo.toml
examples/tumbleweed_todos/todos_client/src/: lib.rs
src/: lib.rs
tumbleweed/: Cargo.toml
tumbleweed/src/: lib.rs
tumbleweed_cli/: Cargo.toml
tumbleweed_client/: Cargo.toml
tumbleweed_core/: Cargo.toml
tumbleweed_core/src/: lib.rs
tumbleweed_derive/: Cargo.toml
tumbleweed_derive/src/: diagnostic.rs  entity.rs  generate_structs_for_schema.rs  lib.rs
tumbleweed_derive/src/schemas/: entity_schema.rs  mod.rs
tumbleweed_derive/tests/: entity.rs  generate_structs_for_schema.rs  tests.rs
tumbleweed_derive/tests/data/: example_app.toml
tumbleweed_persist/: Cargo.toml
tumbleweed_test/: Cargo.toml
tumbleweed_test/src/: lib.rs
