[package]
name = "tumbleweed_todos_client"
version = "0.1.0"
authors = ["Matt Westrik <m@ttwestrik.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tumbleweed_todos_core = { path = "../todos_core" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[lib]
crate-type = ["cdylib"]
