[package]
name = "tumbleweed_todos_client"
version = "0.1.0"
authors = ["Matt Westrik <m@ttwestrik.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tumbleweed_todos_core = { path = "../todos_core" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wee_alloc = "0.4"

[lib]
crate-type = ["cdylib"]

# see https://github.com/rustwasm/wasm-pack/issues/793
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
